<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="103dp"
    android:paddingRight="20dp"
    tools:context=".activitySignUpCommeUnClient">

    <EditText
        android:id="@+id/prenomSignUpClient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/prenom_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nomSignUpClient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/nom_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailSignUpClient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordSignUpClient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomSignUpAvocat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Gender"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/genderClientSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/maleSignUpClient"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/femaleSignUpClient"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateNaissanceClientActvityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/dateNaissanceClientActvityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="Set Date"
            app:cornerRadius="@dimen/material_emphasis_disabled" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="wilaya"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/wilayaSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Phone number"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/phoneNumberClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/SignUpClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="Sign up"
        app:cornerRadius="@dimen/material_emphasis_disabled" />

</LinearLayout>