<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    tools:context=".activitySignUpCommeunAvocat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="Ancienité:"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/minusAvocatSignUp"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yearsExpSingUpAvocatActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/plusAvocatSignup"
                app:layout_constraintStart_toEndOf="@+id/minusAvocatSignUp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plusAvocatSignup"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/prenomSignUpAvocat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/prenom_input"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nomSignUpAvocat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/nom_input"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailSignUpAvocat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordSignUpAvocat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomSignUpAvocat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Gender"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/genderAvocatSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/maleSignUpAvocat"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/femaleSignUpAvocat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateNaissanceAvocatActvityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/dateNaissanceAvocatActvityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:backgroundTint="@color/orange"
            android:text="Set Date"
            app:cornerRadius="@dimen/material_emphasis_disabled" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="wilaya"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/wilayaSp"
            android:layout_width="match_parent"
            android:layout_height="27dp"

            android:layout_weight="2" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Phone number"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/phoneNumberAvocat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/SignUpAvocat"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:text="Sign up"
        app:cornerRadius="@dimen/material_emphasis_disabled" />

</LinearLayout>